Tret corol·lari fals a Estructures Algebràiques

--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -681,9 +681,9 @@
 			\[G\cong \Ima(\varphi)\leq\GrupSimetric_{G}.\qedhere\]
 		\end{proof}
 	\end{theorem}
-	\begin{corollary}
-		Si \(G\) té ordre \(n!\) aleshores \(G\cong\GrupSimetric_{n}\).
-	\end{corollary}
+%	\begin{corollary} %TODO %FER %FALS
+%		Si \(G\) té ordre \(n!\) aleshores \(G\cong\GrupSimetric_{n}\).
+%	\end{corollary}
 	\subsection{Teoremes d'isomorfisme entre grups}
 	\begin{theorem}
 		\label{thm:Teorema fonamental dels isomorfismes}%[Teorema Fonamental dels Isomorfismes]
