Canvi de font a Gyre

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -19,6 +19,8 @@
 %\usepackage[scaled]{beraserif}
 %\usepackage[urw-garamond]{mathdesign} % No va?
 %\usepackage{gfsartemisia-euler}
+\usepackage{newtxtext}
+\usepackage[uprightGreek]{newtxmath}
 \usepackage{tikz-cd}
 \usepackage{tkz-euclide}
 \usetkzobj{all}
@@ -203,7 +205,7 @@
 \newcommand{\diff}{\mathrm{d}}
 \newcommand{\e}{\mathrm{e}}
 \newcommand{\iu}{\mathrm{i}}
-\newcommand{\uppi}{\pi} % REVISIT
+%\newcommand{\uppi}{\pi} % REVISIT
 \newcommand{\GrupOrtogonal}{\mathrm{O}}
 \newcommand{\GrupEspecialOrtogonal}{\mathrm{SO}}
 \newcommand{\matrius}{M}
