Afegida teoria a anàlisi complexa

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -7,7 +7,7 @@
 \usepackage{subfiles}
 \usepackage{mathtools,amssymb,amsthm}
 \usepackage{microtype}
-\usepackage{lmodern}
+%\usepackage{lmodern}
 \usepackage{fixcmex} % Pensar-hi
 %https://tex.stackexchange.com/questions/375823/ugly-alignment-size-of-square-root-symbol-with-latin-modern-at-12pt?noredirect=1&lq=1
 %\usepackage[adobe-utopia]{mathdesign}
@@ -202,7 +202,7 @@
 \newcommand{\field}[1]{\mathbb{#1}}
 \newcommand{\grauExtensio}[2]{[#1\colon #2]} % Dunno why I had :
 
-\newcommand{\diff}{\mathrm{d}}
+\newcommand{\diff}{\mathop{}\!\mathrm{d}}
 \newcommand{\e}{\mathrm{e}}
 \newcommand{\iu}{\mathrm{i}}
 %\newcommand{\uppi}{\pi} % REVISIT
