--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -69,6 +69,7 @@
 %				========= MATEMÀTIQUES ==========
  %%%%% OPERADORS %%%%%
 \newcommand{\B}{\bola}
+\newcommand{\diff}{\mathop{}\!\mathrm{d}}
 \DeclareMathOperator{\bola}{B}
 \DeclareMathOperator{\omicron}{o}
 \DeclareMathOperator{\Omicron}{O}
@@ -114,7 +115,6 @@
 \DeclareMathOperator{\divergencia}{div}
 \DeclareMathOperator{\GrupOrtogonal}{O}
 \DeclareMathOperator{\GrupEspecialOrtogonal}{SO}
-\DeclareMathOperator{\diff}{d}
 \DeclareMathOperator{\componentconnex}{C}
 \DeclareMathOperator{\rapidesa}{v}
 \DeclareMathOperator{\Irr}{Irr}
