--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -29,7 +29,7 @@
 \chapter{Equacions en derivades parcials}
 \section{Equacions en derivades parcials de primer ordre}
 	\subsection{Introducció a les equacions en derivades parcials}
-	\subsection{Equacions lineals i quasi-lineals de primer odre}
+	\subsection{Equacions lineals i quasilineals de primer odre}
 \section{Equacions en derivades parcials de segon ordre}
 	\subsection{Equacions de la corda finita}
 	\subsection{Principi d'Alembert}
@@ -181,19 +181,19 @@
 		\[F(x_{1},\dots,x_{n},\Phi(x),\Phi_{1}(x),\dots,\Phi_{n}(x))=0\]
 		per a tot \(x\in\Omega\). Aleshores direm que \(\Phi\) és una solució de l'equació en derivades parcials.
 	\end{definition}
-	\subsection{Equacions quasi-lineals de primer ordre}
-	\begin{definition}[Equació quasi-lineal]
-		\labelname{equació diferencial quasi-lineal}\label{def:equació diferencial quasi lineal}
+	\subsection{Equacions quasilineals de primer ordre}
+	\begin{definition}[Equació quasilineal]
+		\labelname{equació diferencial quasilineal}\label{def:equació diferencial quasi lineal}
 		Siguin \(\Omega\subseteq\mathbb{R}^{n}\times\mathbb{R}\) un obert, \(\{P_{i}\}_{i=1}^{N}\) una família de funcions de \(\Omega\) a \(\mathbb{R}\) i \(R\colon\Omega\longrightarrow\mathbb{R}\) una funció. Aleshores direm que l'expressió
 		\[\sum_{i=1}^{N}\left(P_{i}(x,u(x))\frac{\partial u(x)}{\partial x_{i}}\right)=R(x,u(x))\]
-		és una equació diferencial quasi-lineal de primer ordre.
+		és una equació diferencial quasilineal de primer ordre.
 	\end{definition}
 	\begin{example}
-		Exemples d'equacions quasi-lineals són, amb \(K>0\), l'equació de la calor
+		Exemples d'equacions quasilineals són, amb \(K>0\), l'equació de la calor
 		\[\frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial u}{\partial t}\]
 		o l'equació de la corda vibrant
 		\[\frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial^{2} u}{\partial t^{2}},\]
-		mentre que exemples d'equacions en derivades parcials que no siguin quasi-lineals són l'equació no lineal de la calor
+		mentre que exemples d'equacions en derivades parcials que no siguin quasilineals són l'equació no lineal de la calor
 		\[\frac{\partial^{2} u}{\partial x^{2}}+f(u)=K\frac{\partial u}{\partial t}\]
 		o la llei de la conservació escalar
 		\[\frac{\partial u(t)}{\partial t}+\divergencia(f(u(t)))=0.\]
