--- a/NovoTeX/FrontMatter/Portada/portada.tex
+++ b/NovoTeX/FrontMatter/Portada/portada.tex
@@ -6,7 +6,7 @@
 \usepackage{tkz-euclide}
 \usetkzobj{all}
 \usetikzlibrary{decorations.text}
-%\usepackage{beton}
+\usepackage{newtxtext}
 \usepackage{anyfontsize}
 \usepackage[scaled=0.92]{helvet}
 \usepackage{graphicx}
